# tensorrt_inference_ros

./: .gitignore  CMakeLists.txt  README.md  package.xml
scripts/: path_gen_client.py
tensorrt_infer_core/: CMakeLists.txt  README.md  package.xml
tensorrt_infer_core/cmake/: CudaComputeTargetFlags.cmake  find_cuda.cmake  package_debian.cmake  project_version.cmake
tensorrt_infer_core/include/tensorrt_infer_core/: conversions.hpp  detection_node.hpp  dynamic_params.hpp  face_detection_node.hpp  face_recognition_node.hpp  face_recognizer.hpp  licence_plate_detector.hpp  mongodb_client.hpp  ros_param_backend.hpp  similarity.hpp
tensorrt_infer_core/nodes/: face_recognition_node.cpp  license_plate_detector_node.cpp  tensorrt_inference_node.cpp
tensorrt_infer_core/src/: conversions.cpp  detection_node.cpp  dynamic_params.cpp  face_detection_node.cpp  face_recognition_node.cpp  face_recognizer.cpp  licence_plate_detector.cpp  mongodb_client.cpp  ros_param_backend.cpp  similarity.cu
tensorrt_infer_core/tensorrt_infer_core/: mongodb_node.py
tensorrt_infer_msgs/: CMakeLists.txt  README.md  package.xml
tensorrt_infer_msgs/cmake/: package_debian.cmake  project_version.cmake
tensorrt_infer_msgs/msg/: BoundingBox.msg  Embedding.msg  FaceInfo.msg  ReturnCode.msg
tensorrt_infer_msgs/srv/: FaceDatabaseInfo.srv  GetMethod.srv  GetModel.srv  SelectMethod.srv  SelectModel.srv  TrainModel.srv
tensorrt_inference_bring_up/: CHANGELOG.rst  CMakeLists.txt  ReadMe.md  package.xml
tensorrt_inference_bring_up/launch/: detection_node_launch.py  face_recognition_node_launch.py  test.launch.py
tensorrt_inference_bring_up/params/: tensorrt_infer_core_params.yaml
tensorrt_inference_bring_up/rviz/: tensorrt_inference.rviz
tensorrt_inference_gui/: package.xml  setup.cfg  setup.py
tensorrt_inference_gui/tensorrt_inference_gui/: app.py  camera_panel.py  config_panel.py  utils.py
