<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tensorrt_infer_core</name>
  <version>0.0.1</version>
  <description>The tensorrt_infer_core package</description>

  <maintainer email="manhha1402@gmail.com">Manh-Ha Hoang</maintainer>
  <license>MIT</license>
  <author>Manh-Ha Hoang</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <depend>ament_index_cpp</depend>
  <depend>rclcpp</depend>
  <depend>message_filters</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2_eigen</depend>
  <depend>realsense2_camera_msgs</depend>
  <depend>neura_scan_utils</depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
